Model findings done

--- a/site/guide/model-validation/_add-finding-via-overview.qmd
+++ b/site/guide/model-validation/_add-finding-via-overview.qmd
@@ -2,17 +2,17 @@
 :::: {.content-visible unless-format="revealjs"}
 To log a finding from the documentation overview: 
 
-a. On your model's **{{< fa book-open >}} Documentation** page, click **{{< fa plus >}} Add Finding**.
+a. On your model's **{{< fa book-open >}} Documentation** page, click **{{< fa plus >}} Add Model Finding**.
 
-a. On the **Add Model Finding** modal that opens, provide information for: 
+a. On the Add Model Finding modal that opens, provide information for: 
 
-   - Title
-   - Risk area
-   - Owner
-   - Severity
-   - Due date
-   - Documentation section
-   - Description
+   - **[title]{.smallcaps}**
+   - **[risk area]{.smallcaps}**
+   - **[owner]{.smallcaps}**
+   - **[severity]{.smallcaps}**
+   - **[due date]{.smallcaps}**
+   - **[documentation section]{.smallcaps}**
+   - **[description]{.smallcaps}**
 
 a. When you are done, click **Save** to submit the finding. 
 
@@ -23,17 +23,17 @@ a. When you are done, click **Save** to submit the finding.
 :::: {.content-hidden unless-format="revealjs"}
 To log a finding from the documentation overview: 
 
-a. On your model's **{{< fa book-open >}} Documentation** page, click **{{< fa plus >}} Add Finding**.
+a. On your model's **{{< fa book-open >}} Documentation** page, click **{{< fa plus >}} Add Model Finding**.
 
-a. On the **Add Model Finding** modal that opens, provide information for: 
+a. On the Add Model Finding modal that opens, provide information for: 
 
-   - Title
-   - Risk area
-   - Owner
-   - Severity
-   - Due date
-   - Documentation section
-   - Description
+   - **[title]{.smallcaps}**
+   - **[risk area]{.smallcaps}**
+   - **[owner]{.smallcaps}**
+   - **[severity]{.smallcaps}**
+   - **[due date]{.smallcaps}**
+   - **[documentation section]{.smallcaps}**
+   - **[description]{.smallcaps}**
 
 a. When you are done, click **Save** to submit the finding. 
 
