--- a/site/guide/model-validation/_add-finding-via-section.qmd
+++ b/site/guide/model-validation/_add-finding-via-section.qmd
@@ -1,21 +1,21 @@
 :::: {.content-visible unless-format="revealjs"}
-While working within a section of your documentation, you can easily log a finding associated with that section without leaving the page:
+While reviewing a section of model documentation, you can easily log a finding associated with that section without leaving the page:
 
 a. Click on **{{< var vm.product >}} Insights™** to expand the insight panel.
 
-a. For the section you want to add a Finding for, click **{{< fa triangle-exclamation >}}  Add Finding** beneath the Documentation Guidelines.
+a. For the section you want to add a Finding for, click **{{< fa plus >}} Add Model Finding** beneath the Documentation Guidelines.
 
-a. On the **Add Model Finding** modal that opens, provide information for: 
+a. On the Add Model Finding modal that opens, provide information for: 
 
-   - Title
-   - Risk area
-   - Owner
-   - Severity
-   - Due date
-   - Documentation section
-   - Description
-   
-   The documentation section will be auto-populated with the section you are working from — you are able to select another section if desired.
+   - **[title]{.smallcaps}**
+   - **[risk area]{.smallcaps}**
+   - **[owner]{.smallcaps}**
+   - **[severity]{.smallcaps}**
+   - **[due date]{.smallcaps}**
+   - **[documentation section]{.smallcaps}**
+   - **[description]{.smallcaps}**
+
+   The **[documentation section]{.smallcaps}** will be auto-populated with the section you are working from — you are able to select another section if desired.
 
    ![Adding a finding with the {{< var vm.product >}} Insights™ panel](add-section-finding.gif){fig-alt="An animated gif demonstrating how to add a finding with the ValidMind Insights™ panel" .screenshot}
 
@@ -27,23 +27,23 @@ a. When you are done, click **Save** to submit the finding.
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
-While working within a section of your documentation, you can easily log a finding associated with that section without leaving the page:
+While reviewing a section of model documentation, you can easily log a finding associated with that section without leaving the page:
 
 a. Click on **{{< var vm.product >}} Insights™** to expand the insight panel.
 
-a. For the section you want to add a Finding for, click **{{< fa triangle-exclamation >}}  Add Finding** beneath the Documentation Guidelines.
+a. For the section you want to add a Finding for, click **{{< fa plus >}} Add Model Finding** beneath the Documentation Guidelines.
 
-a. On the **Add Model Finding** modal that opens, provide information for: 
+a. On the Add Model Finding modal that opens, provide information for: 
 
-   - Title
-   - Risk area
-   - Owner
-   - Severity
-   - Due date
-   - Documentation section
-   - Description
+   - **[title]{.smallcaps}**
+   - **[risk area]{.smallcaps}**
+   - **[owner]{.smallcaps}**
+   - **[severity]{.smallcaps}**
+   - **[due date]{.smallcaps}**
+   - **[documentation section]{.smallcaps}**
+   - **[description]{.smallcaps}**
    
-   The documentation section will be auto-populated with the section you are working from — you are able to select another section if desired.
+   The **[documentation section]{.smallcaps}** will be auto-populated with the section you are working from — you are able to select another section if desired.
 
 a. When you are done, click **Save** to submit the finding. 
 
