--- a/site/guide/model-validation/_provide-compliance-assessments.qmd
+++ b/site/guide/model-validation/_provide-compliance-assessments.qmd
@@ -24,6 +24,8 @@
 
    ![Risk assessment compliance summary](/guide/model-validation/assess-compliance-summary.png){fig-alt="A screenshot of the risk assessment compliance summary" .screenshot group="compliance"}
 
+1. Click under **Risk Assessment Notes** to add your risk assessment notes for that section using the content editing toolbar.^[[Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd#content-editing-toolbar)]
+
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
