--- a/site/guide/model-validation/_track-issue-resolution.qmd
+++ b/site/guide/model-validation/_track-issue-resolution.qmd
@@ -16,12 +16,12 @@ As you prepare your validation report, review open or past due model findings, c
     - **If the finding has been addressed:**
 
         - Add any final comments to assess how the issue was resolved. 
-        - Under **[status]{.smallcaps}**, select `Closed`.
+        - Under **[status]{.smallcaps}**, select `closed`.
 
     - **If part or all of the finding remains to be addressed:**
 
         - Assess if the issue identified by the finding prevents the model from being approved.
-        - If a remediation plan is required, enter the details in the **Remediation Plan** section of the finding.
+        - If a remediation plan is required, enter the details in the **Proposed Remediation Plan** section of the finding.
 
 1. Track open issues until all findings are resolved or a remediation plan is in place for post-approval issues.
 
@@ -52,7 +52,7 @@ Low-severity findings (Level 3)
     - **If the finding has been addressed**: 
     
         - Add any final comments to assess how the issue was resolved.
-        - Under **[status]{.smallcaps}**, select `Closed`.
+        - Under **[status]{.smallcaps}**, select `closed`.
 
     - **If part or all of the finding remains to be addressed**: 
     
