--- a/site/guide/model-validation/add-manage-model-findings.qmd
+++ b/site/guide/model-validation/add-manage-model-findings.qmd
@@ -46,17 +46,17 @@ When linking findings to validation reports,[^4] you can add findings as you ass
 
 4. In any section of the report where the button is available, click **{{< fa link >}} Link Finding to Report**. 
 
-5. On the **Link Finding to Report** modal that opens, click **{{< fa plus >}} Create New Finding**. 
+5. On the Link Finding to Report modal that opens, click **{{< fa plus >}} Create New Finding**. 
 
-6. On the **Add Model Finding** modal that opens, provide information for: 
+6. On the Add Model Finding modal that opens, provide information for: 
 
-   - Title
-   - Risk area
-   - Owner
-   - Severity
-   - Due date
-   - Documentation section
-   - Description
+   - **[title]{.smallcaps}**
+   - **[risk area]{.smallcaps}**
+   - **[owner]{.smallcaps}**
+   - **[severity]{.smallcaps}**
+   - **[due date]{.smallcaps}**
+   - **[documentation section]{.smallcaps}**
+   - **[description]{.smallcaps}**
 
 7. When you are done, click **Save** to submit the finding. 
 
@@ -68,16 +68,15 @@ As findings get resolved or require other changes during the model validation pr
 
 2. Click on a field to make changes. You can make updates to:
 
-   - Title
-   - Description
-   - Proposed remediation plan
-   - Supporting documentation[^7]
-   - Status
-   - Severity
-   - Risk area
-   - Due date
-   - Assignee
-   - Documentation section
+   - **[title]{.smallcaps}** and **Description**
+   - **Proposed Remediation Plan**
+   - **[attachments]{.smallcaps}**[^7]
+   - **[status]{.smallcaps}**
+   - **[severity]{.smallcaps}**
+   - **[risk area]{.smallcaps}**
+   - **[due date]{.smallcaps}**
+   - **[assigned to]{.smallcaps}**
+   - **[documentation section]{.smallcaps}**
 
    You can also add comments to a finding.
 
