--- a/site/guide/model-validation/view-filter-model-findings.qmd
+++ b/site/guide/model-validation/view-filter-model-findings.qmd
@@ -38,12 +38,15 @@ To view findings linked to a specific model:
 
    In the page that opens is a list of findings associated with that particular model, including information for:
 
-   - Title
-   - Description
-   - Severity by color
-   - Status
-   - Assignee
-   - Due date if past due
+   - [title]{.smallcaps}
+   - [creation date]{.smallcaps}
+   - [business unit]{.smallcaps}
+   - [risk area]{.smallcaps}
+   - [severity]{.smallcaps}
+   - [status]{.smallcaps}
+   - [inventory model]{.smallcaps}
+   - [assigned to]{.smallcaps}
+   - [due date]{.smallcaps}
 
    ![List of findings specific to a model](model-specific-findings.png){fig-alt="A screenshot showing a list of findings specific to a model" .screenshot}
 
@@ -79,12 +82,12 @@ To narrow down the findings, you can apply some filters:
 
 3. On the **Select Your Filters** dialog that opens, enter your filtering criteria for:
 
-   - Status
-   - Model inventory
-   - Risk area
-   - Business units
-   - Severity
-   - Assignee
+   - [status]{.smallcaps}
+   - [model inventory]{.smallcaps}
+   - [risk area]{.smallcaps}
+   - [business units]{.smallcaps}
+   - [severity]{.smallcaps}
+   - [assigned to]{.smallcaps}
 
    For example, to filter by open findings for the `Customer Churn Model` assigned to `Jane Doe`:
 
