--- a/site/guide/reporting/export-documentation.qmd
+++ b/site/guide/reporting/export-documentation.qmd
@@ -34,13 +34,15 @@ Export your model documentation, validation reports, and ongoing monitoring docu
 
 4. In right sidebar, click **{{< fa download >}} Export Document**.
 
-7. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
+    Configure whether or not comments[^5] left on your document should be exported in your document.
+
+5. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
 
 ## Export validation report
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^5]
+2. Select a model or find your model by applying a filter or searching for it.[^6]
 
 3. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
 
@@ -48,9 +50,10 @@ Export your model documentation, validation reports, and ongoing monitoring docu
 
 5. Configure what is exported in your document by checking off the relevant boxes:
 
-   - Include compliance summary[^6]
-   - Include validation guidelines information[^7]
+   - Include compliance summary[^7]
+   - Include validation guidelines information[^8]
    - Include validation guideline adherence details
+   - Include comments left on document[^9]
 
 6. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
 
@@ -58,13 +61,15 @@ Export your model documentation, validation reports, and ongoing monitoring docu
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^4]
+2. Select a model or find your model by applying a filter or searching for it.[^10]
 
 3. In the left sidebar that appears for your model, click **{{< fa desktop >}} Ongoing Monitoring**.
 
 4. In right sidebar, click **{{< fa download >}} Export Document**.
 
-7. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
+    Configure whether or not comments[^11] left on your document should be exported in your document.
+
+5. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
 
 ## What's next
 
@@ -83,8 +88,16 @@ Export your model documentation, validation reports, and ongoing monitoring docu
 
 [^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^5]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting)
 
-[^6]: [Assess compliance](/guide/model-validation/assess-compliance.qmd)
+[^6]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^7]: [Manage validation guidelines](/guide/model-validation/manage-validation-guidelines.qmd)
+[^7]: [Assess compliance](/guide/model-validation/assess-compliance.qmd)
+
+[^8]: [Manage validation guidelines](/guide/model-validation/manage-validation-guidelines.qmd)
+
+[^9]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting)
+
+[^10]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^11]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting)
