Everything -metrics over time done

--- a/site/guide/monitoring/enable-monitoring.qmd
+++ b/site/guide/monitoring/enable-monitoring.qmd
@@ -38,7 +38,7 @@ To enable ongoing monitoring for a model, add `monitoring=True` to your code sni
 2. Copy the code snippet for the model: 
 
    - In the left sidebar that appears for your model, click **{{< fa rocket >}} Getting Started**.
-   - Locate the code snippet and set **[enable ongoing monitoring]{.smallcaps}** to true.
+   - Locate the code snippet and set **[enable ongoing monitoring?]{.smallcaps}** to true.
    - Click **{{< fa regular copy >}} Copy snippet to clipboard**. 
 
 3. Paste the snippet into your development source code.[^4]
