--- a/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
+++ b/site/training/administrator-fundamentals/using-validmind-for-model-risk-management.qmd
@@ -1,5 +1,5 @@
 ---
-title: "{{< var vm.product >}} for <br>Model Risk Management"
+title: "Using {{< var vm.product >}} for <br>Model Risk Management"
 subtitle: "Administrator Fundamentals — Module 3 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
 lightbox: true
 format:
@@ -20,7 +20,7 @@ format:
       - slideover
   html:
   # Change this to the file name prepended by a _ to get around the global HTML output settings required by _metadata.yml
-    output-file: _validmind-for-model-risk-management.html
+    output-file: _using-validmind-for-model-risk-management.html
     search: false
 title-slide-attributes:
   data-background-color: "#083E44"
