--- a/site/guide/configuration/register-with-validmind.qmd
+++ b/site/guide/configuration/register-with-validmind.qmd
@@ -6,31 +6,23 @@ date: last-modified
 
 Register with our cloud-hosted {{< var validmind.platform >}}, so you can begin working with model documentation or configure {{< var vm.product >}} for your organization.
 
-With an email address or a Google,[^1] GitHub,[^2] or Microsoft[^3] account, you can only gain access to {{< var vm.product >}} by:
-
-1. [Accepting an invite](#accept-an-invite)
-
-
+To access {{< var vm.product >}}, you must be invited by someone in your organization. Once you [receive an invitation](#accepting-an-invite), you can register using your email address or an existing Google,[^1] GitHub,[^2] or Microsoft[^3] account.
 
 ::: {.attn}
 
 ## Prerequisites
 
 - [x] Your organization has an existing account with {{< var vm.product >}}.
-- [x] You have been invited by someone else in your organization to join {{< var vm.product >}}.
+- [x] You have been invited[^5] by someone else in your organization to join {{< var vm.product >}}.
 - [x] Additionally, an email address that is able to receive messages from {{< var vm.product >}}.[^4]
 
 ::: {.callout}
-ValidMind access is invite-only. To use the platform, your organization must already have a ValidMind account, and you must be invited by someone with the Customer Admin role[^5].
+{{< var vm.product >}} access is invite-only. To use the platform, your organization must already have a {{< var vm.product >}} account, and you must be invited by someone with the Customer Admin role[^6].
 :::
 
 :::
 
 ## Accepting an invite 
-
-::: {.callout title="This method will allow you to register as user linked to your institution's existing organization."}
-These steps require that you have been invited[^6] by a Customer Admin user to join your organization on {{< var vm.product >}}.
-:::
 
 1. Check the email inbox for the address you provided your organization to be associated with {{< var vm.product >}} for the following email:
 
@@ -126,10 +118,9 @@ b. `validmind.com`
     a. `validmind.ai`
     b. `validmind.com`
 
-[^5]: [Manage roles](manage-roles.qmd)
+[^5]: [User invitations](/guide/configuration/manage-users.qmd#user-invitations)
 
-
-[^6]: [User invitations](/guide/configuration/manage-users.qmd#user-invitations)
+[^6]: [Manage roles](manage-roles.qmd)
 
 [^7]: [Customize your dashboard](customize-your-dashboard.qmd)
 
