--- a/site/guide/configuration/register-with-validmind.qmd
+++ b/site/guide/configuration/register-with-validmind.qmd
@@ -6,103 +6,25 @@ date: last-modified
 
 Register with our cloud-hosted {{< var validmind.platform >}}, so you can begin working with model documentation or configure {{< var vm.product >}} for your organization.
 
-With an email address or a Google,[^1] GitHub,[^2] or Microsoft[^3] account, you can gain access to {{< var vm.product >}} in two ways:
-
-1. [Sign up independently](#sign-up-independently)
-2. [Accept an invite](#accept-an-invite)
+To access {{< var vm.product >}}, an administrator of your organization must invite you to join. Once you receive an invitation, register using your email address or an existing Google,[^1] GitHub,[^2] or Microsoft[^3] account.
 
 ::: {.attn}
 
 ## Prerequisites
 
-- [x] Access to {{< var vm.product >}} via the public internet.
-- [x] Alternatively, you have been invited by someone else in your organization to join {{< var vm.product >}}.
+- [x] Your organization has an existing account with {{< var vm.product >}}.
+- [x] You have been invited[^5] by someone else in your organization to join {{< var vm.product >}}.
 - [x] Additionally, an email address that is able to receive messages from {{< var vm.product >}}.[^4]
 
 ::: {.callout}
-For most users, someone with the Customer Admin role[^5] will invite you to your organization.
+## {{< var vm.product >}} access is invite-only. 
+
+To use the platform, your organization must already have a {{< var vm.product >}} account, and you must be invited by someone with the Customer Admin role[^6].
 :::
 
 :::
 
-## Sign up independently 
-
-::: {.callout title="This method will allow you to create a brand new organization to which your account will be linked to as a Customer Admin user."}
-Choose this method if you intend to set up your organization for your institution. 
-:::
-
-{{< include _validmind-public-internet.qmd >}}
-
-2. On the welcome screen, click **Sign up**.
-
-3. Enter your email address and input a secure, unique password, or choose one of the single sign-on options to link to your account:
-
-    - **Continue with Google**
-    - **Continue with GitHub**
-    - **Continue with Microsoft Account**
-
-::: {.column-margin}
-![{{< var vm.product >}} signup welcome screen](signup-welcome-screen.png){width=90% fig-alt="Screenshot of the ValidMind signup welcome screen" .screenshot}
-:::
-
-4. Click **Continue**.
-
-5. Complete your user profile details:
-
-    - **[first name]{.smallcaps}** — Your given name.
-    - **[last name]{.smallcaps}** — Your surname.
-    - **[organization]{.smallcaps}**[^6] — The name of your organization you are setting up {{< var vm.product >}} on behalf of.
-    - **[job title]{.smallcaps}** — Your role at your organization.
-
-![{{< var vm.product >}} profile completion screen](signup-complete-profile.png){width=80% fig-alt="Screenshot of the ValidMind profile completion screen" .screenshot}
-
-6. Review the terms and conditions, then select **Yes, I accept the <u>terms & conditions</u>**[^7] to indicate that you accept them.
-
-    Optionally, select the following if desired:
-
-    a. **Yes, sign me up for updates from {{< var vm.product >}}**[^8] — Sign up for news from {{< var vm.product >}}
-    b. **Yes, I want to join your online community**[^9] — Request to join our online community
-
-7. Check the email inbox for the address you used to sign up with {{< var vm.product >}} for the following email:
-
-    - From: `no-reply@validmind.ai`
-    - Subject: "Verify your email"
-
-![Verification email sent by {{< var vm.product >}}](verify-email.png){width=80% fig-alt="Screenshot of the verification email sent by ValidMind" .screenshot group="verify"}
-  
-::: {.column-margin}
-If you cannot locate this email, you may need to review your spam or junk mail folders and filters, or request that your IT allow-list our owned domains or retrieve any messages sent by:
-
-a. `validmind.ai`
-b. `validmind.com`
-:::
-
-::: {.column-margin}
-![Confirmation of email verification](email-verified.png){fig-alt="Screenshot of the confirmation of email verification" .screenshot  group="verify"}
-:::
-
-8. Click **<u>Confirm my account</u>** to gain full access to {{< var vm.product >}}.
-
-9. Return to the main {{< var vm.product >}} dashboard[^10] by clicking on **Back to {{< var vm.product >}}**. 
-
-    Sample models[^11] are populated for you in this new organization to demonstrate the usage of {{< var vm.product >}}.
-
-:::: {.flex .flex-wrap .justify-around}
-::: {.w-40-ns}
-![{{< var vm.product >}}'s main dashboard](main-dashboard.png){fig-alt="Screenshot of the main ValidMind dashboard" .screenshot group="validmind"}
-
-:::
-::: {.w-40-ns}
-![Sample models populated by {{< var vm.product >}}](sample-models.png){fig-alt="Screenshot of the sample models populated by ValidMind" .screenshot group="validmind"}
-
-:::
-::::
-
-## Accept an invite 
-
-::: {.callout title="This method will allow you to register as user linked to your institution's existing organization."}
-These steps require that you have been invited[^12] by a Customer Admin user to join your organization on {{< var vm.product >}}.
-:::
+## Accepting an invite 
 
 1. Check the email inbox for the address you provided your organization to be associated with {{< var vm.product >}} for the following email:
 
@@ -161,9 +83,9 @@ b. `validmind.com`
 
 6. Click **<u>Confirm my account</u>** to gain full access to {{< var vm.product >}}.
 
-7. Return to the main {{< var vm.product >}} dashboard[^13] by clicking on **Back to {{< var vm.product >}}**. 
+7. Return to the main {{< var vm.product >}} dashboard[^7] by clicking on **Back to {{< var vm.product >}}**. 
     
-    Sample models[^14] are populated for you in this new organization to demonstrate the usage of {{< var vm.product >}}.
+    Sample models[^8] are populated for you in this new organization to demonstrate the usage of {{< var vm.product >}}.
 
 :::: {.flex .flex-wrap .justify-around}
 ::: {.w-40-ns}
@@ -198,29 +120,10 @@ b. `validmind.com`
     a. `validmind.ai`
     b. `validmind.com`
 
-[^5]: [Manage roles](manage-roles.qmd)
+[^5]: [User invitations](/guide/configuration/manage-users.qmd#user-invitations)
 
-[^6]: [Managing your organization](managing-your-organization.qmd)
+[^6]: [Manage roles](manage-roles.qmd)
 
-[^7]: 
+[^7]: [Customize your dashboard](customize-your-dashboard.qmd)
 
-    ::: {.callout}
-    ## {{< var vm.product >}} terms and conditions
-
-    [View in full {{< fa hand-point-right >}}](https://validmind.com/about/legal/)
-
-    :::
-
-[^8]: **{{< var vm.product >}}:** [Code, Contribution, and Community.](https://validmind.com/community/)
-
-[^9]: [{{< var vm.product >}} community](/about/contributing/validmind-community.qmd)
-
-[^10]: [Customize your dashboard](customize-your-dashboard.qmd)
-
-[^11]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)
-
-[^12]: [User invitations](/guide/configuration/manage-users.qmd#user-invitations)
-
-[^13]: [Customize your dashboard](customize-your-dashboard.qmd)
-
-[^14]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)
+[^8]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)
