Rename pre-render script, add configurable product name, store SVG files in config.json

--- a/site/releases/2025/2025-apr-24/release-notes.qmd
+++ b/site/releases/2025/2025-apr-24/release-notes.qmd
@@ -262,7 +262,7 @@ This update enhances the Docker configuration for the ValidMind documentation si
 
 The Makefile sees enhancements with new targets `docker-site` and `docker-site-lite`, designed for building the site with Docker-specific settings. The `docker-build` target has been updated to utilize the new `docker-site-lite` process.
 
-A sample Kubernetes manifest, `validmind-docs.yaml`, is included to facilitate deploying the documentation site with URLs configurable through environment variables or a ConfigMap. Additionally, two scripts manage URL handling: `modify_urls.sh` replaces actual URLs with placeholders during build, while `docker_entrypoint.sh` substitutes these placeholders with real URLs at runtime, using either environment variables or values from `config.json`.
+A sample Kubernetes manifest, `validmind-docs.yaml`, is included to facilitate deploying the documentation site with URLs configurable through environment variables or a ConfigMap. Additionally, two scripts manage URL handling: `make_configurable.sh` replaces actual URLs with placeholders during build, while `docker_entrypoint.sh` substitutes these placeholders with real URLs at runtime, using either environment variables or values from `config.json`.
 
 These changes offer enhanced flexibility in deploying the documentation site across different environments by enabling dynamic configuration of URLs based on deployment settings. -->
 
