Update logo references, product name

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -276,7 +276,7 @@ a:hover {
 
 
 :::: {.f2}
-![](about/ValidMind-logo-color.svg){height=50px} **Academy**
+![](logo.svg){height=50px} **Academy**
 :::: 
 
 :::: {.f4}
