--- a/site/releases/documentation-releases.qmd
+++ b/site/releases/documentation-releases.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Documentation releases"
 listing:
-  contents: releases/documentation/**/*.qmd
+  contents: ../releases/documentation/**/*.qmd
   fields: [date, title, categories, description]
   sort: "date desc"
   max-description-length: 300
