--- a/site/releases/validmind-library-releases.qmd
+++ b/site/releases/validmind-library-releases.qmd
@@ -1,7 +1,7 @@
 ---
 title: "{{< var validmind.developer >}} releases"
 listing:
-  contents: releases/validmind-library/**/release-notes.qmd
+  contents: ../releases/validmind-library/**/pr-*.qmd
   fields: [date, title, categories, description]
   sort: "date desc"
   type: default
@@ -10,3 +10,5 @@ listing:
   filter-ui: true
 page-layout: full
 --- 
+
+<!-- site/releases/validmind-library -->
