--- a/site/releases/validmind-platform-releases.qmd
+++ b/site/releases/validmind-platform-releases.qmd
@@ -1,7 +1,7 @@
 ---
 title: "{{< var validmind.platform >}} releases"
 listing:
-  contents: releases/frontend
+  contents: ../releases/frontend/**/pr-*.qmd
   fields: [date, title, categories, description]
   sort: "date desc"
   max-description-length: 300
