Update sidebar, all-releases topic, and move CSS

--- a/site/releases/all-releases.qmd
+++ b/site/releases/all-releases.qmd
@@ -20,9 +20,14 @@ listing:
     exclude:
         categories: ["breaking changes", "deprecations", "releases by year"]
     contents:
-        - ../releases/**/**/*.qmd
-        - ../releases/**/*.qmd
+        - ../releases/2025/**/*.qmd
 ---
+
+## Current releases
+
+TBD
+
+## Previous releases by date
 
 :::{#releases}
 :::
