--- a/site/releases/frontend/25.07/pr-1407.qmd
+++ b/site/releases/frontend/25.07/pr-1407.qmd
@@ -13,8 +13,8 @@ date: "June 27, 2025"
 We have introduced a new feature that lets you manage finding statuses within the application. This enhancement streamlines the process of tracking and updating finding statuses, improving overall workflow efficiency.
 
 <div style="position: relative; display: inline-block;">
-  <div style="position: absolute; top: 0; left: 0; width: 100%; height: 45px; background: #333;"></div>
+  <div style="position: absolute; top: 0; left: 0; width: 100%; height: 60px; background: #333;"></div>
   <video class="img-fluid" controls>
-    <source src="/releases/cmvm/25.07/283acc9d-afe7-4742-89d8-e8cce450d033.mov" type="video/quicktime">
+    <source src="/releases/frontend/25.07/283acc9d-afe7-4742-89d8-e8cce450d033.mov" type="video/quicktime">
   </video>
 </div>
