Figure out an acceptable way to embed release notes

--- a/site/releases/all-releases.qmd
+++ b/site/releases/all-releases.qmd
@@ -3,6 +3,19 @@ title: "All releases"
 sidebar: releases
 date: last-modified
 listing:
+  - id: release-pages
+    type: default
+    max-description-length: 250
+    sort: "name desc"
+    fields: [title, date, subtitle]
+    field-display-names:
+      title: "Release notes"
+      subtitle: "{{< var vm.product >}} version"
+      description: "Summary"
+    contents:
+        - ../releases/validmind-library-releases.qmd
+        - ../releases/validmind-platform-releases.qmd
+        - ../releases/documentation-releases.qmd
   - id: releases
     type: table
     page-size: 20
@@ -25,9 +38,10 @@ listing:
 
 ## Current releases
 
-TBD
+:::{#release-pages}
+:::
 
-## Previous releases by date
+## Previous releases
 
 :::{#releases}
 :::
