--- a/site/releases/documentation-releases.qmd
+++ b/site/releases/documentation-releases.qmd
@@ -1,5 +1,7 @@
 ---
 title: "Documentation releases"
+subtitle: "25.07"
+date: "June 27, 2025"
 listing:
   contents: ../releases/documentation/**/*.qmd
   fields: [date, title, categories, description]
