--- a/site/releases/validmind-library-releases.qmd
+++ b/site/releases/validmind-library-releases.qmd
@@ -1,5 +1,7 @@
 ---
 title: "{{< var validmind.developer >}} releases"
+subtitle: "v2.8.26"
+date: "June 26, 2025"
 listing:
   contents: ../releases/validmind-library/**/pr-*.qmd
   fields: [date, title, categories, description]
