--- a/site/releases/validmind-platform-releases.qmd
+++ b/site/releases/validmind-platform-releases.qmd
@@ -1,5 +1,7 @@
 ---
 title: "{{< var validmind.platform >}} releases"
+subtitle: "25.07"
+date: "June 27, 2025"
 listing:
   contents: ../releases/frontend/**/pr-*.qmd
   fields: [date, title, categories, description]
