Add new release pages to home page, cleanup

--- a/site/releases/all-releases.qmd
+++ b/site/releases/all-releases.qmd
@@ -5,13 +5,8 @@ date: last-modified
 listing:
   - id: release-pages
     type: default
-    max-description-length: 250
-    sort: "name desc"
+    sort: false
     fields: [title, date, subtitle]
-    field-display-names:
-      title: "Release notes"
-      subtitle: "{{< var vm.product >}} version"
-      description: "Summary"
     contents:
         - ../releases/validmind-library-releases.qmd
         - ../releases/validmind-platform-releases.qmd
