--- a/site/index.qmd
+++ b/site/index.qmd
@@ -43,12 +43,12 @@ listing:
     grid-columns: 3
     max-description-length: 150
     sort: false
-    fields: [title, subtitle, description]
+    fields: [title, subtitle, date]
     contents:
     # MAKE-RELEASE-NOTES-LATEST-MARKER
-      - /releases/2025/2025-apr-24/release-notes.qmd
-      - /releases/2025/2025-mar-07/release-notes.qmd
-      - /releases/2025/2025-jan-31/release-notes.qmd
+      - /releases/validmind-library-releases.qmd
+      - /releases/validmind-platform-releases.qmd
+      - /releases/documentation-releases.qmd
     # MAKE-RELEASE-NOTES-OLDEST-MARKER
   - id: validmind-academy
     type: grid
