Switch to grid layout, add backticks

--- a/site/releases/all-releases.qmd
+++ b/site/releases/all-releases.qmd
@@ -4,7 +4,7 @@ sidebar: releases
 date: last-modified
 listing:
   - id: release-pages
-    type: default
+    type: grid
     sort: false
     fields: [title, date, subtitle]
     contents:
