--- a/site/releases/documentation-releases.qmd
+++ b/site/releases/documentation-releases.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Documentation releases"
-subtitle: "25.07"
+subtitle: "`25.07`"
 date: "June 27, 2025"
 listing:
   contents: ../releases/documentation/**/*.qmd
