--- a/site/releases/validmind-platform-releases.qmd
+++ b/site/releases/validmind-platform-releases.qmd
@@ -1,6 +1,6 @@
 ---
 title: "{{< var validmind.platform >}} releases"
-subtitle: "25.07"
+subtitle: "`25.07`"
 date: "June 27, 2025"
 listing:
   contents: ../releases/frontend/**/pr-*.qmd
