Public release notes for `25.07` and `v2.8.26` (#792)
* New release-notes action before adaption

* Fix paths for release-notes

* Temporarily comment out creating a new branch

* Re-add commented ou git branch command

* Add pages for repo-level release notes

* Add 25.07 release notes

* Fix filtering

* Fix filtering

* Update sidebar, all-releases topic, and move CSS

* Remove cmvm from branch name

* Remove previous 25.07 release notes

* Fix path issue

* Remove reference to cmvm

* Merge release notes for cmvm/25.07

* Fix video link

* Figure out an acceptable way to embed release notes

* Add new release pages to home page, cleanup

* Fix link

* Switch to grid layout, add backticks

* Fix broken link

* Check for existing PR before creating one

* Merge release notes for cmvm/25.07

* Fix link

* Merge release notes for cmvm/25.07

* Remove target folders before copying

* Fix broken link

* Remove stray bold text

* Merge release notes for cmvm/25.07

* Merge release notes for cmvm/25.07

* Remove Admin UI PRs from release notes

* Merge release notes for cmvm/25.07

* Delete admin PRs, again

--- a/site/releases/all-releases.qmd
+++ b/site/releases/all-releases.qmd
@@ -3,6 +3,14 @@ title: "All releases"
 sidebar: releases
 date: last-modified
 listing:
+  - id: release-pages
+    type: grid
+    sort: false
+    fields: [title, date, subtitle]
+    contents:
+        - ../releases/validmind-library-releases.qmd
+        - ../releases/validmind-platform-releases.qmd
+        - ../releases/documentation-releases.qmd
   - id: releases
     type: table
     page-size: 20
@@ -20,9 +28,15 @@ listing:
     exclude:
         categories: ["breaking changes", "deprecations", "releases by year"]
     contents:
-        - ../releases/**/**/*.qmd
-        - ../releases/**/*.qmd
+        - ../releases/2025/**/*.qmd
 ---
+
+## Current releases
+
+:::{#release-pages}
+:::
+
+## Previous releases
 
 :::{#releases}
 :::
