--- a/site/get-started/administrator/quickstart-administrator.qmd
+++ b/site/get-started/administrator/quickstart-administrator.qmd
@@ -1,30 +1,67 @@
 ---
-title: "Quickstart — Setup & Administration [coming soon]{.smallercaps .pink}"
+title: "Quickstart — Setup & Administration"
 subtitle: "10 minutes"
 date: last-modified
+listing:
+  - id: whats-next
+    type: grid
+    grid-columns: 2
+    max-description-length: 250
+    sort: false
+    fields: [title, description]
+    contents:
+    - ../../training/administrator-fundamentals/administrator-fundamentals-register.qmd
+    - ../../guide/guides.qmd
 ---
 
 Set up the foundational units for your organization within the {{< var validmind.platform >}}, prepare your organization for users, then grant access to your first user.
 
-<!-- BECK'S OUTLINE / NOTES -->
+{{< include /get-started/common-steps/_before-you-begin.qmd >}}
 
-<!-- {{< include /get-started/common-steps/_before-you-begin.qmd >}}
+## Set up your organization
 
-## Setting up your organization
+First, let's set up the foundational units of your organization:
 
-### Set up business units
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
 
-### Set up use cases
+2. Under Workspace, select **Organization**.
 
-## Preparing your organization for users
+3. Add business units and use cases as required by your organization.
+
+::: {.panel-tabset}
+
+### Add business units
+
+{{< include /guide/configuration/_business-units.qmd >}}
+
+{{< include /guide/configuration/_add-business-units.qmd >}}
+
+### Add use cases
+
+{{< include /guide/configuration/_use-cases.qmd >}}
+
+{{< include /guide/configuration/_add-use-cases.qmd >}}
+
+:::
+
+## Prepare your organization for users
+
+Next, let's set up the foundations for granular user access:
 
 ### Set up groups
 
+{{< include /guide/configuration/_user-groups.qmd >}}
+
 ### Set up roles
+
+{{< include /guide/configuration/_user-roles.qmd >}}
 
 ## Invite your first user
 
 ## What's next
 
-- Administrator Fundamentals
-- ValidMind Platform Guides -->
+Now that you've grasped the basics of using {{< var vm.product >}} as an organization administrator, continue on your journey with our end-to-end training course for administrators and browse through our resource hub for the {{< var validmind.platform >}}:
+
+:::{#whats-next}
+:::
+
