--- a/site/get-started/administrator/quickstart-administrator.qmd
+++ b/site/get-started/administrator/quickstart-administrator.qmd
@@ -48,15 +48,39 @@ First, let's set up the foundational units of your organization:
 
 Next, let's set up the foundations for granular user access:
 
-### Set up groups
+::: {.panel-tabset}
+
+### Add groups
 
 {{< include /guide/configuration/_user-groups.qmd >}}
 
-### Set up roles
+{{< include /guide/configuration/_add-groups.qmd >}}
+
+### Add roles
 
 {{< include /guide/configuration/_user-roles.qmd >}}
 
+{{< include /guide/configuration/_add-roles.qmd >}}
+
+#### Manage role permissions
+
+{{< include /guide/configuration/_manage-role-permissions.qmd >}}
+
+:::
+
 ## Invite your first user
+
+Once you've set up at least one business unit, use case, group, and role, invite a user to join your organization:
+
+{{< include /guide/configuration/_invite-users.qmd >}}
+
+::: {.callout}
+## Try inviting yourself!
+
+a. Add **+1** to your email handle (**handle+1@your-company.com**) and accept the invitation.
+b. Then, confirm that the invitation has disappeared from Pending Invites and that your new user has a join date under Invite History.
+
+:::
 
 ## What's next
 
