--- a/site/guide/configuration/manage-roles.qmd
+++ b/site/guide/configuration/manage-roles.qmd
@@ -23,6 +23,8 @@ Please note that the [{{< fa hand >}} Customer Admin]{.bubble} role has the high
 
 {{< include _add-roles.qmd >}}
 
+### Manage role permissions
+
 {{< include _manage-role-permissions.qmd >}}
 
 ### Manage role users
