--- a/site/training/administrator-fundamentals/onboarding-your-organization.qmd
+++ b/site/training/administrator-fundamentals/onboarding-your-organization.qmd
@@ -450,19 +450,7 @@ Once you've set up the basics, grant users access to the {{< var validmind.platf
 ## {background-iframe="https://app.prod.validmind.ai/settings/invitation" background-interactive="true" data-preload="yes"}
 
 :::: {.slideover--l .three-quarters .auto-collapse-10}
-**Invite a new user**
-
-1. Enter in the details under Invite by Email:
-  - **Group** — The group you created earlier.
-  - **Role** — The role you created earlier.
-2. Click **{{< fa envelope >}} Send Invite**.
-
-::: {.embed}
-**Tip:** Try inviting yourself! Add **+1** to your email handle (**handle+1@your-company.com**) and accept the invitation.
-
-Then, confirm that the invitation has disappeared from Pending Invites and that your new user has a join date under Invite History.
-
-:::
+{{< include _invite-new-user.qmd >}}
 
 When you are done, click [{{< fa chevron-right >}}]() to continue.
 
