Fixed footer links and Configurtion issue

--- a/site/guide/configuration/managing-your-organization.qmd
+++ b/site/guide/configuration/managing-your-organization.qmd
@@ -2,7 +2,7 @@
 title: "Managing your organization"
 date: last-modified
 listing:
-  - id: guides-onboarding
+  - id: guides-configuration
     type: grid
     max-description-length: 250
     grid-columns: 2
@@ -52,7 +52,7 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has these permiss
 
 ## What's next
 
-:::{#guides-onboarding}
+:::{#guides-configuration}
 :::
 
 
