--- a/site/guide/guides.qmd
+++ b/site/guide/guides.qmd
@@ -11,7 +11,7 @@ listing:
     fields: [title, description]
     contents:
     - configuration/accessing-validmind.qmd
-  - id: guides-onboarding
+  - id: guides-configuration
     type: grid
     max-description-length: 250
     sort: false
@@ -124,7 +124,7 @@ Our guides offer step-by-step instructions for frequent tasks you perform within
 
 :::
 
-## Onboarding
+## Configuration
 
 Before you begin, let's make sure you're able to access {{< var vm.product >}}:
 
@@ -133,7 +133,7 @@ Before you begin, let's make sure you're able to access {{< var vm.product >}}:
 
 Onboard your organization, teams or business units, and users onto the {{< var validmind.platform >}}:
 
-:::{#guides-onboarding}
+:::{#guides-configuration}
 :::
 
 Customize your personal user experience within the {{< var validmind.platform >}}:
