--- a/site/get-started/administrator/quickstart-administrator.qmd
+++ b/site/get-started/administrator/quickstart-administrator.qmd
@@ -30,13 +30,13 @@ First, let's set up the foundational units of your organization:
 
 ::: {.panel-tabset}
 
-### Add business units
+### i. Add business units
 
 {{< include /guide/configuration/_business-units.qmd >}}
 
 {{< include /guide/configuration/_add-business-units.qmd >}}
 
-### Add use cases
+### ii. Add use cases
 
 {{< include /guide/configuration/_use-cases.qmd >}}
 
@@ -50,13 +50,13 @@ Next, let's set up the foundations for granular user access:
 
 ::: {.panel-tabset}
 
-### Add groups
+### i. Add groups
 
 {{< include /guide/configuration/_user-groups.qmd >}}
 
 {{< include /guide/configuration/_add-groups.qmd >}}
 
-### Add roles
+### ii. Add roles
 
 {{< include /guide/configuration/_user-roles.qmd >}}
 
