I chnaged the font size of the footer, aligned the release icon to the text. Added listing but need it to be displayed instead of the current one we have

--- a/site/index.qmd
+++ b/site/index.qmd
@@ -7,6 +7,19 @@ resources:
   - assets/**
 filters:
     - tachyons
+listing:
+  - id: releases
+    type: grid
+    grid-columns: 3
+    max-description-length: 150
+    sort: false
+    fields: [title, subtitle, date]
+    contents:
+    # MAKE-RELEASE-NOTES-LATEST-MARKER
+      - /releases/validmind-library-releases.qmd
+      - /releases/validmind-platform-releases.qmd
+      - /releases/documentation-releases.qmd
+    # MAKE-RELEASE-NOTES-OLDEST-MARKER
 ---
 
 ```{=html}
@@ -341,13 +354,14 @@ ValidMind [Academy]{.pink}
 <!-- FILLER COLUMN DO NOT REMOVE -->
 :::
 
-::: {.w-50-ns}
+::: {.w-40-ns}
 
 ::: {.f3 .b}
 Latest Release
 :::
 
-![](/assets/home-page/release_icon.svg){.mb3 width="30"}&ensp;**25.03.05** / April 24, 2025  
+![](/assets/home-page/release_icon.svg){.release-icon}&ensp;**25.03.05** / April 24, 2025
+  
 
 ::: {.pl4 .nt3 .mid-gray}
 We’ve released the ability to manage model stakeholder types within the ValidMind Platform, support for custom configuration of test-driven blocks via the ValidMind Library, an updated Python API reference within our documentation, and more.
