--- a/site/training/administrator-fundamentals/_invite-new-user.qmd
+++ b/site/training/administrator-fundamentals/_invite-new-user.qmd
@@ -30,7 +30,7 @@ b. Then, confirm that the invitation has disappeared from Pending Invites and th
 
 
 :::: {.content-hidden unless-format="revealjs"}
-**Invite new users**
+**Invite a new user**
 
 1. Enter in the details under Invite by Email:
   - **Group** — The group you created earlier.
