chore: update remaining docs-demo occurrences
The pre-prod docs site now lives at https://docs-staging.validmind.ai.
This will update the Makefile and site content to reflect this change.

Signed-off-by: Cullen Taylor <cullen@eggshell.me>

--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -321,7 +321,7 @@ Learn how to navigate the {{< var vm.product >}}'s key features and understand h
 ::: {.w-30-ns .pl4 .bl}
 **Notes**
 
-- Derived from [EU AI Act (V0)](https://docs-demo.vm.validmind.ai/product-demos/eu-ai-act/v0/index.html#/title-slide)
+- Derived from [EU AI Act (V0)](https://docs-staging.validmind.ai/product-demos/eu-ai-act/v0/index.html#/title-slide)
 - Switch to training template
 - Fix display issues using V1 fix (don't use absolute negative placement for columns) 
 :::
