--- a/site/guide/guides.qmd
+++ b/site/guide/guides.qmd
@@ -72,7 +72,7 @@ listing:
     sort: false
     fields: [title, description]
     contents: 
-    - model-validation/manage-validation-guidelines.qmd
+    - model-validation/managing-model-validation.qmd
     - templates/working-with-templates.qmd
     - templates/manage-text-block-library.qmd
   - id: guides-model-validation
@@ -174,7 +174,7 @@ Finally, refine your model documentation, and collaborate with model validators 
 
 ## Model validation
 
-First, set up validation guidelines, customizable report templates, and reusable blocks:
+First, set up your organization for validation, and customize reusable report templates and blocks:
 
 :::{#guides-validator}
 :::
