--- a/site/guide/model-inventory/working-with-model-inventory.qmd
+++ b/site/guide/model-inventory/working-with-model-inventory.qmd
@@ -17,7 +17,7 @@ aliases:
   - /guide/working-with-model-inventory.html
 ---
 
-Get started with the {{< var vm.product >}} model inventory, which tracks comprehensive details for all your models throughout the model lifecycle. The model inventory is customizable and extensible, with a layout that can be configured to suit each user's needs.
+Get started with the {{< var vm.product >}} inventory, which tracks comprehensive details for all your models throughout the model lifecycle. The model inventory is customizable and extensible, with a layout that can be configured to suit each user's needs.
 
 ::: {.attn}
 
