--- a/site/guide/model-validation/managing-model-validation.qmd
+++ b/site/guide/model-validation/managing-model-validation.qmd
@@ -13,7 +13,7 @@ listing:
     - manage-finding-statuses.qmd
 ---
 
-CHANGE ME
+Enable your organization to use the {{< var validmind.platform >}} for validation by setting up guidelines for validation reports and configuring options for findings to align with your organization's requirements.
 
 :::{#validation}
 :::
