--- a/site/guide/model-validation/manage-finding-statuses.qmd
+++ b/site/guide/model-validation/manage-finding-statuses.qmd
@@ -3,4 +3,67 @@ title: "Manage finding statuses"
 date: last-modified
 ---
 
-WIP
+Configure the statuses available to be assigned to findings logged on models to track the progress and resolution of findings throughout their lifecycles.
+
+::: {.callout}
+`Open` and `Closed` are [Locked]{.bubble} stages, meaning they cannot be modified or removed.
+
+:::
+
+::: {.attn}
+
+## Prerequisites
+
+- [x] {{< var link.login >}}
+- [x] You are a [{{< fa hand >}} Customer Admin]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^1] 
+
+:::
+
+## Add finding statuses
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Findings, select **Finding Statuses**.
+
+3. Click **{{< fa plus >}} Add Finding Status**.
+
+4. Enter in a **[name]{.smallcaps}** and assign a **[color]{.smallcaps}** to your finding status.
+
+5. When you are done, click **Add Finding Status** to create your new status.
+
+
+## Edit or delete statuses
+
+1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Findings, select **Finding Statuses**.
+
+3. Click **{{< fa plus >}} Add Finding Status**.
+
+4. Hover over the finding status you'd like to modify.
+
+5. When the **{{< fa ellipsis-vertical >}}** appears, click on it and select:
+
+    - **{{< fa pencil >}} Edit Details** to change the **[name]{.smallcaps}** or **[color]{.smallcaps}** of the status.
+    - [**{{< fa trash-can >}} Delete Status**]{.red} to remove the status.
+
+<!-- 1. In the left sidebar, click **{{< fa gear >}} Settings**.
+
+2. Under Models, select **Model Stages**.
+
+3. Hover over the stage you'd like to modify.
+
+4. When the **{{< fa ellipsis-vertical >}}** appears, click on it:
+
+    - Select **{{< fa pencil >}} Edit Details** to modify that stage.
+    - Select **{{< fa trash-can >}} Delete Stage**. On the confirmation dialogue that appears, select **OK** to confirm deletion.
+
+::: {.callout-important title="Deleting stages already in use will cause your workflows to no longer function correctly."}
+Make sure that the stage you're deleting is not associated with any workflows or active models in your inventory before proceeding.
+::: -->
+
+
+<!-- FOOTNOTES -->
+
+[^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+ -->
