--- a/site/guide/model-validation/manage-finding-statuses.qmd
+++ b/site/guide/model-validation/manage-finding-statuses.qmd
@@ -47,20 +47,10 @@ Configure the statuses available to be assigned to findings logged on models to 
     - **{{< fa pencil >}} Edit Details** to change the **[name]{.smallcaps}** or **[color]{.smallcaps}** of the status.
     - [**{{< fa trash-can >}} Delete Status**]{.red} to remove the status.
 
-<!-- 1. In the left sidebar, click **{{< fa gear >}} Settings**.
+::: {.callout-important title="Finding status deletion is permanent and cannot be undone."}
 
-2. Under Models, select **Model Stages**.
-
-3. Hover over the stage you'd like to modify.
-
-4. When the **{{< fa ellipsis-vertical >}}** appears, click on it:
-
-    - Select **{{< fa pencil >}} Edit Details** to modify that stage.
-    - Select **{{< fa trash-can >}} Delete Stage**. On the confirmation dialogue that appears, select **OK** to confirm deletion.
-
-::: {.callout-important title="Deleting stages already in use will cause your workflows to no longer function correctly."}
-Make sure that the stage you're deleting is not associated with any workflows or active models in your inventory before proceeding.
-::: -->
+Findings statuses cannot be deleted if in use on a finding. Ensure that the status you're deleting is not associated with any findings before proceeding.
+:::
 
 
 <!-- FOOTNOTES -->
