--- a/site/guide/model-validation/add-manage-model-findings.qmd
+++ b/site/guide/model-validation/add-manage-model-findings.qmd
@@ -14,7 +14,8 @@ Add findings within the {{< var validmind.platform >}} at the model or documenta
 - [x] {{< var link.login >}}
 - [x] The model is already registered in the model inventory.[^1]
 - [x] Model documentation is completed or in progress for your model.[^2]
-- [x] You are a [{{< fa circle-check >}} Validator]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^3]
+- [x] Finding statuses have been set up for use with findings.[^3]
+- [x] You are a [{{< fa circle-check >}} Validator]{.bubble} or assigned another role with sufficient permissions to perform the tasks in this guide.[^4]
 
 :::
 
@@ -36,11 +37,11 @@ Add findings within the {{< var validmind.platform >}} at the model or documenta
 
 ## Add findings on validation reports
 
-When linking findings to validation reports,[^4] you can add findings as you assess a model's compliance:
+When linking findings to validation reports,[^5] you can add findings as you assess a model's compliance:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^5]
+2. Select a model or find your model by applying a filter or searching for it.[^6]
 
 3. In the left sidebar that appears for your model, click **{{< fa shield >}} Validation Report**.
 
@@ -64,13 +65,13 @@ When linking findings to validation reports,[^4] you can add findings as you ass
 
 As findings get resolved or require other changes during the model validation process, you can update them:
 
-1. Locate the finding you want to update.[^6]
+1. Locate the finding you want to update.[^7]
 
 2. Click on a field to make changes. You can make updates to:
 
    - **[title]{.smallcaps}** and **Description**
    - **Proposed Remediation Plan**
-   - **[attachments]{.smallcaps}**[^7]
+   - **[attachments]{.smallcaps}**[^8]
    - **[status]{.smallcaps}**
    - **[severity]{.smallcaps}**
    - **[risk area]{.smallcaps}**
@@ -113,14 +114,14 @@ Uploaded files must be less than 50 MB each in size.
 ## Delete model findings
 
 ::: {.callout-important title="Finding deletion is permanent."}
-- While finding deletion will be logged under your {{< fa wifi >}} Model Activity,[^8] deleted findings cannot be retrieved.
-- Deleting a finding will also remove it from any validation reports[^9] it was previously attached to.
+- While finding deletion will be logged under your {{< fa wifi >}} Model Activity,[^9] deleted findings cannot be retrieved.
+- Deleting a finding will also remove it from any validation reports[^10] it was previously attached to.
 
 :::
 
 If you logged a finding in error or otherwise no longer need to track that finding, you can delete it:
 
-1. Locate the finding you want to delete.[^10]
+1. Locate the finding you want to delete.[^11]
 
 2. On the finding's detail page, click **{{< fa trash-can>}} Delete Finding** in the right sidebar.
 
@@ -135,18 +136,20 @@ If you logged a finding in error or otherwise no longer need to track that findi
 
 [^2]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
-[^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+[^3]: [Manage finding statuses](manage-finding-statuses.qmd)
 
-[^4]: [Link findings to reports](/guide/model-validation/assess-compliance.qmd#link-findings-to-reports)
+[^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^5]: [Link findings to reports](/guide/model-validation/assess-compliance.qmd#link-findings-to-reports)
 
-[^6]: [View and filter model findings](view-filter-model-findings.qmd)
+[^6]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^7]: [Manage supporting documentation](#manage-supporting-documentation)
+[^7]: [View and filter model findings](view-filter-model-findings.qmd)
 
-[^8]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
+[^8]: [Manage supporting documentation](#manage-supporting-documentation)
 
-[^9]: [Link findings to reports](/guide/model-validation/assess-compliance.qmd#link-findings-to-reports)
+[^9]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
 
-[^10]: [View and filter model findings](view-filter-model-findings.qmd)
+[^10]: [Link findings to reports](/guide/model-validation/assess-compliance.qmd#link-findings-to-reports)
+
+[^11]: [View and filter model findings](view-filter-model-findings.qmd)
